fixed alignment

--- a/webapp/src/react/components/post-header/styles/post-header.scss
+++ b/webapp/src/react/components/post-header/styles/post-header.scss
@@ -35,7 +35,6 @@
     @include flexContainer('column', left, center);
     border-radius: 3px;
     padding: 3px 12px;
-    padding-left: 15px;
     margin-left: 1px;
 
     &--green {
